src/styles/global.css
@import './tailwind.css';
@import './gradient-icon.css';
@import './buttons.css';
@import './search-icon.css';

@import 'atropos/css';

@view-transition {
  navigation: auto;
}

main:has(+ * + #audio-player .player) {
  @media (min-width: 1024px) {
    @apply mb-28;
  }
}

html {
  color-scheme: light dark;
}

html,
.custom-scrollbar {
  scrollbar-color: var(--color-light-input-border) transparent;

  @media (prefers-color-scheme: dark) {
    scrollbar-color: var(--color-dark-input-border) transparent;
  }
}

footer:has(+ #audio-player .player) {
  @media (max-width: 1024px) {
    @apply mb-40;
  }
}

[aria-label='EpisodeList'] li {
  animation: episode-in linear both;
  animation-timeline: view();
  animation-range: entry 10% cover 25%;

  > div {
    content-visibility: auto;
    contain-intrinsic-block-size: 45vh;
  }

  @media (width >= 1024px) {
    & h2 > a {
      animation: toggle-vt-names linear both;
      animation-timeline: view();
    }
  }
}

@keyframes episode-in {
  from {
    opacity: 0;
    translate: 0 25px;
  }
}

@keyframes toggle-vt-names {
  entry 0% {
    --should-vt: none;
  }
  entry 1%,
  exit 99% {
    --should-vt: var(--vt-name);
  }
  exit 100% {
    --should-vt: none;
  }
}

.animated-bottom-border {
  @apply dark:border-dark-border border-b after:block after:h-[1px] after:w-0 after:bg-gradient-to-r after:from-[#C6B2FF] after:to-[#8D67FF] after:transition-all after:duration-500 after:ease-in-out hover:after:w-full dark:after:from-[#43C9F5] dark:after:to-[#B4EDFF];
}

.input {
  @apply border-light-input-border bg-light-input-bg focus:border-light-input-border-focused dark:border-dark-input-border dark:bg-dark-input-bg dark:focus:border-dark-input-border-focused rounded border p-4 !ring-0 transition-colors !outline-none;
}

@utility section-heading {
  @apply text-xs font-bold tracking-wide uppercase;
}

@utility section-heading-underlined {
  @apply section-heading dark:border-dark-border border-b pb-4;
}

